packetlib_ffi/include/packetlib.h

typedef enum Direction {
  ToServer,
  ToClient,
} Direction;
typedef enum OutputType {
  /**
   * Output only parsed packet.
   */
  OutputPacket,
  /**
   * Output only raw packet.
   */
  OutputRaw,
  /**
   * Output both packets.
   */
  OutputBoth,
} OutputType;
/**
 * Packet types.
 */
typedef enum PacketType {
  NGS,
  Classic,
  NA,
  JP,
  Vita,
  Raw,
} PacketType;
typedef enum ReaderResult {
  Ok,
  RawOnly,
  ReaderEOF,
  PPACError,
} ReaderResult;
/**
 * Serialized packet format
 */
typedef enum SerializedFormat {
  JSON,
  MessagePack,
  MessagePackNamed,
} SerializedFormat;
typedef enum SocketResult {
  Ready,
  Blocked,
  NoSocket,
  SocketError,
} SocketResult;
typedef struct Connection Connection;
typedef struct PPACReader PPACReader;
typedef struct Packet Packet;
typedef struct PacketWorker PacketWorker;
typedef struct SocketFactory SocketFactory;
/**
 * Fat pointer to data.
 */
typedef struct DataBuffer {
  const uint8_t *ptr;
  size_t size;
} DataBuffer;
typedef struct PacketData {
  /**
   * When was the packet stored (in secs).
   */
  uint64_t time;
  /**
   * Where the packet was heading.
   */
  enum Direction direction;
  /**
   * Which client version produced this packet.
   */
  enum PacketType protocol_type;
  /**
   * Parsed packet (if requested)
   */
  struct Packet *data;
  /**
   * Raw packet (if requested)
   */
  const uint8_t *raw_ptr;
  size_t raw_size;
} PacketData;
/**
 * Installs the provided listener. This function takes ownership of the descriptor.
 *
 * # Safety
 * `fd` must be a valid descriptor.
 */
bool listener_from_fd(struct SocketFactory *factory, int64_t fd);
/**
 * Returns a pointer to a UTF-8-encoded zero-terminated error string or a null pointer if no error
 * occurred.
 *
 * # Safety
 * The returned pointer is only valid until the next failable function call.
 */
const uint8_t *get_sf_error(const struct SocketFactory *factory);
/**
 * Creates a new connection from owned socket descriptor.
 *
 * # Safety
 * `fd` must be a valid descriptor.
 */
struct Connection *new_connection(int64_t fd,
                                  enum PacketType packet_type,
                                  const int8_t *in_key,
                                  const int8_t *out_key);
/**
 * Destroys a connection.
 */
void free_connection(struct Connection *_conn);
/**
 * Returns the IP address of the connection.
 */
uint32_t get_conn_ip(const struct Connection *conn);
/**
 * Changes the connection's packet type.
 */
void conn_set_packet_type(struct Connection *conn, enum PacketType packet_type);
/**
 * Returns a [`Packet`] or a null pointer if no connection was provided.
 *
 * # Safety
 * The returned pointer is only valid until the next data-returning function call.
 * If the returned array is empty, the pointer might be non-null but still invalid. This is not
 * considered an error.
 */
struct Packet *conn_get_data(struct Connection *conn);
/**
 * Reads a packet from the connection and stores it in the internal buffer. Call `conn_get_data`
 * to access it.
 */
enum SocketResult conn_read_packet(struct Connection *conn);
/**
 * Writes a packet to the connection. If `ptr` is null, flushes the buffer.
 *
 * # Note
 * If this function returns [`SocketResult::Blocked`], then the data has been written to the
 * buffer.
 */
enum SocketResult conn_write_packet(struct Connection *conn, const struct Packet *packet);
/**
 * Returns the encryption key (for [`Packet::EncryptionResponse`]).
 */
struct DataBuffer conn_get_key(struct Connection *conn);
/**
 * Returns a pointer to a UTF-8-encoded zero-terminated error string or a null pointer if no error
 * occurred.
 *
 * # Safety
 * The returned pointer is only valid until the next failable function call.
 */
const uint8_t *get_conn_error(const struct Connection *conn);
/**
 * Creates a new PPAC reader. After creation don't forget to check for errors.
 */
struct PPACReader *new_reader(const int8_t *path);
/**
 * Destroys the reader.
 */
void free_reader(struct PPACReader *_reader);
/**
 * Sets the output type.
 */
void set_out_type(struct PPACReader *reader, enum OutputType out_type);
/**
 * Reads the packet and returns if the function succeeded.
 */
enum ReaderResult read_packet(struct PPACReader *reader);
/**
 * Returns a pointer to the packet data or a null pointer if no data exists.
 *
 * # Note
 * [`data`] field is only returned once and must be freed by the caller.
 *
 * # Safety
 * The returned pointer is only valid until the next data-returning function call.
 * If the returned array is empty, the pointer might be non-null but still invalid. This is not
 * considered an error.
 */
struct PacketData get_reader_data(struct PPACReader *reader);
/**
 * Returns a pointer to a UTF-8-encoded zero-terminated error string or a null pointer if no error
 * occurred.
 *
 * # Safety
 * The returned pointer is only valid until the next failable function call.
 */
const uint8_t *get_reader_error(const struct PPACReader *reader);