packetlib_ffi/include/packetlib.cs


        /// <summary>Installs the provided listener. This function takes ownership of the descriptor.  # Safety `fd` must be a valid descriptor.</summary>
        [DllImport(__DllName, EntryPoint = "listener_from_fd", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool listener_from_fd(SocketFactory* factory, long fd);

        /// <summary>Returns a pointer to a UTF-8-encoded zero-terminated error string or a null pointer if no error occurred.  # Safety The returned pointer is only valid until the next failable function call.</summary>
        [DllImport(__DllName, EntryPoint = "get_sf_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* get_sf_error(SocketFactory* factory);

        /// <summary>Creates a new connection from owned socket descriptor.  # Safety `fd` must be a valid descriptor.  'in_key' must either be null or it must point to a UTF-8-encoded, zero-terminated path to a PKCS#8 file containing a private key for decryption. 'out_key' must either be null or it must point to a UTF-8-encoded, zero-terminated path to a PKCS#8 file containing a public key for encryption.</summary>
        [DllImport(__DllName, EntryPoint = "new_connection", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Connection* new_connection(long fd, PacketType packet_type, sbyte* in_key, sbyte* out_key);

        /// <summary>Destroys a connection.</summary>
        [DllImport(__DllName, EntryPoint = "free_connection", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void free_connection(Connection* _conn);

        /// <summary>Returns the IP address of the connection.</summary>
        [DllImport(__DllName, EntryPoint = "get_conn_ip", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint get_conn_ip(Connection* conn);

        /// <summary>Changes the connection's packet type.</summary>
        [DllImport(__DllName, EntryPoint = "conn_set_packet_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void conn_set_packet_type(Connection* conn, PacketType packet_type);

        /// <summary>Returns a [`Packet`] or a null pointer if no connection was provided.  # Safety The returned pointer is only valid until the next data-returning function call. If the returned array is empty, the pointer might be non-null but still invalid. This is not considered an error.</summary>
        [DllImport(__DllName, EntryPoint = "conn_get_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Packet* conn_get_data(Connection* conn);

        /// <summary>Reads a packet from the connection and stores it in the internal buffer. Call `conn_get_data` to access it.</summary>
        [DllImport(__DllName, EntryPoint = "conn_read_packet", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SocketResult conn_read_packet(Connection* conn);

        /// <summary>Writes a packet to the connection. If `ptr` is null, flushes the buffer.  # Note If this function returns [`SocketResult::Blocked`], then the data has been written to the buffer.</summary>
        [DllImport(__DllName, EntryPoint = "conn_write_packet", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SocketResult conn_write_packet(Connection* conn, Packet* packet);

        /// <summary>Returns the encryption key (for [`Packet::EncryptionResponse`]).</summary>
        [DllImport(__DllName, EntryPoint = "conn_get_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern DataBuffer conn_get_key(Connection* conn);

        /// <summary>Returns a pointer to a UTF-8-encoded zero-terminated error string or a null pointer if no error occurred.  # Safety The returned pointer is only valid until the next failable function call.</summary>
        [DllImport(__DllName, EntryPoint = "get_conn_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* get_conn_error(Connection* conn);

        /// <summary>Creates a new PPAC reader. After creation don't forget to check for errors.</summary>
        [DllImport(__DllName, EntryPoint = "new_reader", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PPACReader* new_reader(sbyte* path);

        /// <summary>Destroys the reader.</summary>
        [DllImport(__DllName, EntryPoint = "free_reader", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void free_reader(PPACReader* _reader);

        /// <summary>Sets the output type.</summary>
        [DllImport(__DllName, EntryPoint = "set_out_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void set_out_type(PPACReader* reader, OutputType out_type);

        /// <summary>Reads the packet and returns if the function succeeded.</summary>
        [DllImport(__DllName, EntryPoint = "read_packet", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ReaderResult read_packet(PPACReader* reader);

        /// <summary>Returns a pointer to the packet data or a null pointer if no data exists.  # Note [`data`] field is only returned once and must be freed by the caller.  # Safety The returned pointer is only valid until the next data-returning function call. If the returned array is empty, the pointer might be non-null but still invalid. This is not considered an error.</summary>
        [DllImport(__DllName, EntryPoint = "get_reader_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PacketData get_reader_data(PPACReader* reader);

        /// <summary>Returns a pointer to a UTF-8-encoded zero-terminated error string or a null pointer if no error occurred.  # Safety The returned pointer is only valid until the next failable function call.</summary>
        [DllImport(__DllName, EntryPoint = "get_reader_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* get_reader_error(PPACReader* reader);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct DataBuffer
    {
        public byte* ptr;
        public nuint size;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct PacketWorker
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct Packet
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SocketFactory
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct Connection
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct PPACReader
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct PacketData
    {
        public ulong time;
        public Direction direction;
        public PacketType protocol_type;
        public Packet* data;
        public byte* raw_ptr;
        public nuint raw_size;
    }


    internal enum PacketType : uint
    {
        NGS,
        Classic,
        NA,
        JP,
        Vita,
        Raw,
    }

    internal enum SerializedFormat : uint
    {
        JSON,
        MessagePack,
        MessagePackNamed,
    }

    internal enum SocketResult : uint
    {
        Ready,
        Blocked,
        NoSocket,
        SocketError,
    }

    internal enum ReaderResult : uint
    {
        Ok,
        RawOnly,
        ReaderEOF,
        PPACError,
    }

    internal enum Direction : uint
    {
        ToServer,
        ToClient,
    }

    internal enum OutputType : uint
    {
        OutputPacket,
        OutputRaw,
        OutputBoth,
    }


}
